--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,42 @@
 [project]
-name = "composer"
+name = "docker-composer"
 version = "0.1.0"
-description = "Manage Docker Compose stacks."
+description = "A metadata-driven management tool for organizing and controlling multiple Docker Compose stacks."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+license = {text = "Apache-2.0"}
+authors = [
+    #FIXME: Fill this out.
+    {name = "Jesse Johnson", email = "your.email@example.com"}
+]
+keywords = ["docker", "docker-compose", "container", "management", "devops"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "Topic :: System :: Systems Administration",
+    "Topic :: Software Development :: Build Tools",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+dependencies = [
+    "pyyaml>=6.0",
+]
+
+[project.scripts]
+composer = "composer.cli:main"
+
+[project.urls]
+#FIXME: Fill these out.
+Homepage = "https://github.com/yourusername/composer"
+Repository = "https://github.com/yourusername/composer"
+Issues = "https://github.com/yourusername/composer/issues"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/composer"]
