Rename project 'composer' => 'gam'.
composer is a popular PHP package manager.

gam is a social gathering of whales, like the Docker mascot. =)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+pythonpath = src
 testpaths = test
 python_files = test_*.py
 python_classes = Test*
@@ -7,6 +8,6 @@ addopts =
     -v
     --strict-markers
     --tb=short
-    --cov=src/composer
+    --cov=src/gam
     --cov-report=term-missing
     --cov-report=html
