--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "docker-composer"
+name = "docker-gam"
 version = "0.1.0"
 description = "A metadata-driven management tool for organizing and controlling multiple Docker Compose stacks."
 readme = "README.md"
@@ -31,16 +31,16 @@ test = [
 ]
 
 [project.scripts]
-composer = "composer.cli:main"
+gam = "gam.cli:main"
 
 [project.urls]
-Homepage = "https://github.com/fictiontoreality/composer"
-Repository = "https://github.com/fictiontoreality/composer"
-Issues = "https://github.com/fictiontoreality/composer/issues"
+Homepage = "https://github.com/fictiontoreality/gam"
+Repository = "https://github.com/fictiontoreality/gam"
+Issues = "https://github.com/fictiontoreality/gam/issues"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/composer"]
+packages = ["src/gam"]
